Modify css to fix wrong colors on modals

--- a/src/view/styles/ToolBar.css
+++ b/src/view/styles/ToolBar.css
@@ -14,6 +14,10 @@
     border-color: var(--vscode-highContrastButtonBorderOverride-color);
     border-width: 1px;
     border-style: solid;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
 }
 
 .toolbar-icon {
@@ -38,7 +42,6 @@
     height: fit-content;
     padding-left: 16px;
     box-shadow: none;
-    background: var(--vscode-debugToolBar-background);
     margin-left: 1px;
 }
 
